ajout choix PC à l'interface utilisateur

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
     <h1>SHIFOUMI</h1>
     <button id="utilisateur">
-        fais ton choix !
+        click on te dit !
     </button>
+    <div id="skynet"></div>
+    <div id="resultat"></div>
     
-    <button id="go">
-        C'est parti !
-    </button>
+
     <script src="index.js"></script>
 </body>
 </html>
