--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>SHIFOUMI</h1>
     <button id="utilisateur">
-        click on te dit !
+        Click on te dit !
     </button>
     <div id="skynet"></div>
     <div id="resultat"></div>
