--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
 <body>
     <h1>SHIFOUMI</h1>
     <button id="utilisateur">
-        Click on te dit !
+        Faites vos jeux !
     </button>
-    <div id="skynet"></div>
-    <div id="resultat"></div>
+    <section id="information">
+        <div id="player"></div>
+        <div id="skynet"></div>
+        <div id="result"></div>
+    </section>
+    <section id="counter"><p> Player <span id="player-score">0</span> : <span id="skynet-score">0</span> Skynet</p></section>
+
     
 
     <script src="index.js"></script>
