--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>SHIFOUMI</h1>
     <button id="utilisateur">
-        Faites vos jeux !
+        Cliquez et faites vos jeux !
     </button>
     <section id="information">
         <div id="player"></div>
